# METIS

./: .gitignore  CMakeLists.txt  CMakePresets.json  METISConfig.cmake.in
.github/workflows/: ci.yml
conf/: gkbuild.cmake
include/: metis.h
libmetis/: CMakeLists.txt
programs/: CMakeLists.txt  gpmetis.c  mpmetis.c  ndmetis.c
